test/syc/bad/unexpinit.c
/*
 * Unexpected initializer.
 *
 * Parser accepts this and code generator needs to detect this case.
 */
struct r = { };
